Project selection Firefox rendering fix

--- a/COnCEPT-PLATFORM-APP/src/main/webapp/resources/css/dashboard.css
+++ b/COnCEPT-PLATFORM-APP/src/main/webapp/resources/css/dashboard.css
@@ -103,7 +103,8 @@ body{
     -moz-appearance:none;
     appearance:none;
     cursor:pointer;
-    width:218px;    
+    width:218px;
+    text-align:left;
 }
 
 .nav-projects select option{
